--- a/css/include/colors.css
+++ b/css/include/colors.css
@@ -59,6 +59,7 @@
 	--GW-collapse-inline-disclosure-button-hover-color: #999;
 	--GW-collapse-inline-disclosure-button-text-color: #fff;
 	--GW-collapse-inline-disclosure-button-text-hover-color: #fff;
+	--GW-collapse-inline-hover-highlight-color: #eee;
 
     /*  Headings.
      */
