--- a/css/include/components/colors-dark-GENERATED.css
+++ b/css/include/components/colors-dark-GENERATED.css
@@ -59,6 +59,7 @@
 	--GW-collapse-inline-disclosure-button-hover-color: #8b8b8b;
 	--GW-collapse-inline-disclosure-button-text-color: #000;
 	--GW-collapse-inline-disclosure-button-text-hover-color: #000;
+	--GW-collapse-inline-hover-highlight-color: #333;
 
     /*  Headings.
      */
