--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -60,6 +60,7 @@
 	--GW-collapse-inline-disclosure-button-hover-color: #999;
 	--GW-collapse-inline-disclosure-button-text-color: #fff;
 	--GW-collapse-inline-disclosure-button-text-hover-color: #fff;
+	--GW-collapse-inline-hover-highlight-color: #eee;
 
     /*  Headings.
      */
@@ -1861,6 +1862,7 @@ body.special-halloween-dark h6 {
 	--GW-collapse-inline-disclosure-button-hover-color: #8b8b8b;
 	--GW-collapse-inline-disclosure-button-text-color: #000;
 	--GW-collapse-inline-disclosure-button-text-hover-color: #000;
+	--GW-collapse-inline-hover-highlight-color: #333;
 
     /*  Headings.
      */
@@ -3935,7 +3937,7 @@ ReaderMode.injectStyleBlock(ReaderMode.styles, "reader-mode-styles");
 //  Activate saved mode, once the <body> element is loaded (and classes known).
 doWhenBodyExists(ReaderMode.setMode);
 </script>
-<link rel="preload" href="/static/css/fonts.css?v=1683502403" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
-<link rel="preload" href="/static/css/default.css?v=1683524858" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
+<link rel="preload" href="/static/css/fonts.css?v=1683526402" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
+<link rel="preload" href="/static/css/default.css?v=1683526379" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
 <link rel="preload" href="/static/css/links.css?v=1682784367" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
 <link rel="preload" href="/static/img/icon/icons.svg" as="image">
