Fix minor annotation format bug and add character escape syntax to transclude template format

--- a/template/include/annotation-blockquote-inside.tmpl
+++ b/template/include/annotation-blockquote-inside.tmpl
@@ -19,7 +19,7 @@
 				 ><{originalURLText}></a>]</span>
 		<[IFEND]>\
 
-		<[IF authorDateAux]>, <{authorDateAux}><[IF2 abstract]>:<[IF2END]><[IFEND]>
+		<[IF authorDateAux]><[IF2 author | date]>,\ <[IF2END]><{authorDateAux}><[IF2 abstract]>:<[IF2END]><[IFEND]>
 	</p>
 	<[IF abstract]>
 	<blockquote class="data-field annotation-abstract"><{abstract}></blockquote>
