--- a/404.page
+++ b/404.page
@@ -25,12 +25,14 @@ error404: true
 > <a href="https://en.wikipedia.org/wiki/Sh%C5%8Dtetsu" class="backlink-not id-not link-annotated link-live" title="WP: Shōtetsu (正徹, 1381–1459 CE) was a Japanese poet during the Muromachi period, and is considered to have been the last poet in the courtly waka tradition; a number of his disciples were important in the development of the renga art form, which led to the haiku.">Shōtetsu</a>
 </div>
 
-Try to remember... Other options:
+Try to remember what you were looking for...
 
-- visit the [**main index**](/index "'Essays', N/A 2009"){.backlink-not .icon-not} of pages to find what you are looking for
+# Other Finding Options
+
+- visit the [**main index**](/index "'Essays', N/A 2009"){.backlink-not .icon-not}
 - use a [**search engine**](https://www.google.com/search?q=site%3Agwern.net)
 - browse [documents by **tag**](/doc/index "‘Essays’, N/A 2009"){.backlink-not .icon-not}
-- or look at this list of **pages by traffic**:
+- or look at a list of **pages by traffic**:
 
 <div class="columns">
 - [GPT-3 Creative Fiction](/gpt-3 "Branwen 2020"){.backlink-not .icon-not}
@@ -91,7 +93,7 @@ Try to remember... Other options:
 - [Prediction markets](/prediction-market){.backlink-not .icon-not}
 - [Time-lock encryption](/self-decrypting "Branwen 2011"){.backlink-not .icon-not}
 - [Genetics and Eugenics in Frank Herbert’s Dune-verse](/dune-genetics "Branwen 2018"){.backlink-not .icon-not}
-- [CO<sub>2</sub> Coin: Decentralized Carbon Capture Blockchains](/co2-coin "Branwen 2021"){.backlink-not .icon-not}
+- [CO<sub>2</sub> Coin: Carbon Capture Blockchains](/co2-coin "Branwen 2021"){.backlink-not .icon-not}
 - [Wei Dai/Satoshi Nakamoto 2009 Bitcoin emails](/doc/bitcoin/2008-nakamoto "Nakamoto & Dai 2014"){.backlink-not .icon-not}
 - ["Earth in My Window"](/doc/anime/eva/little-boy/2005-murakami "Murakami & Hoaglund 2012"){.backlink-not .icon-not}
 - [Book Reviews](/review/book "Branwen 2013"){.backlink-not .icon-not}
@@ -101,9 +103,9 @@ Try to remember... Other options:
 - [Zeo sleep self-experiments](/zeo/zeo "Branwen 2010"){.backlink-not .icon-not}
 - [`/newsletter/2020/06`](/newsletter/2020/06 "‘June 2020 News’, Branwen 2019"){.backlink-not .icon-not}
 - [`/newsletter/2021/03`](/newsletter/2021/03 "‘March 2021 News’, Branwen 2020"){.backlink-not .icon-not}
-- [One Man’s Modus Ponens](/modus "Branwen 2012"){.backlink-not .icon-not}
+- [One Man’s Modus Ponens...](/modus "Branwen 2012"){.backlink-not .icon-not}
 - [Everything Is Correlated](/everything "Branwen 2014"){.backlink-not .icon-not}
-- [Why Tool AIs Want to Be Agent AIs](/tool-ai "Branwen 2016"){.backlink-not .icon-not}
+- [Tool AIs Want to Be Agent AIs](/tool-ai "Branwen 2016"){.backlink-not .icon-not}
 - [`/newsletter/2021/01`](/newsletter/2021/01 "‘January 2021 News’, Branwen 2020"){.backlink-not .icon-not}
 - [GPT-3 Nonfiction experiments](/gpt-3-nonfiction "'GPT-3 Nonfiction', Branwen 2020"){.backlink-not .icon-not}
 - [`/newsletter/2020/08`](/newsletter/2020/08 "‘August 2020 News’, Branwen 2019"){.backlink-not .icon-not}
@@ -151,7 +153,7 @@ Try to remember... Other options:
 - [`/newsletter/2020/09`](/newsletter/2020/09 "‘September 2020 News’, Branwen 2019"){.backlink-not .icon-not}
 - [_Death Note_ Ending](/death-note-ending "‘Death Note’s Ending’, Branwen 2008"){.backlink-not .icon-not}
 - [The Melancholy of Kyon](/kyon){.backlink-not .icon-not}
-- [Calculating The Gaussian Expected Maximum](/order-statistics "Branwen 2016"){.backlink-not .icon-not}
+- [Calculating The Gaussian Expected Maximum](/order-statistic "Branwen 2016"){.backlink-not .icon-not}
 - [Vitamin D sleep experiments](/zeo/vitamin-d "Branwen 2012"){.backlink-not .icon-not}
 - [GPT-2 Preference Learning for Music Generation](/gpt-2-preference-learning "Branwen 2019"){.backlink-not .icon-not}
 - [Hafu in anime](/hafu "‘Hafu Gender Ratios in Anime’, Branwen 2011"){.backlink-not .icon-not}
