default.html: SSIs: add newline so they render a little more readable in the final served HTML (rather than jamming the SSI comment and the SSI first-line-of-content onto the same line, which is confusing to read)

--- a/template/default.html
+++ b/template/default.html
@@ -4,11 +4,13 @@
     <meta charset="utf-8">
 
     <!-- SSI: CSS+JS inline for speed -->
-    <!-- INLINED-HEAD-BEGIN --><!--#include virtual="/static/include/inlined-head.html" --><!-- INLINED-HEAD-END -->
+    <!-- INLINED-HEAD-BEGIN -->
+    <!--#include virtual="/static/include/inlined-head.html" --><!-- INLINED-HEAD-END -->
 
     <!-- SSI: fetch the title & body fonts immediately to avoid re-rendering -->
     <!-- SSI: also inline minimal set of font CSS needed for initial screen, for speed -->
-    <!-- INLINED-FONTS-BEGIN --><!--#include virtual="/static/include/inlined-fonts.html" --><!-- INLINED-FONTS-END -->
+    <!-- INLINED-FONTS-BEGIN -->
+    <!--#include virtual="/static/include/inlined-fonts.html" --><!-- INLINED-FONTS-END -->
 
     <!-- SSI: Inlined asset versions -->
     <!-- INLINED-ASSET-VERSIONS-BEGIN--><!--#include virtual="/static/include/inlined-asset-versions.html" --><!-- INLINED-ASSET-VERSIONS-END -->
@@ -162,7 +164,8 @@
     </main>
 
     <!-- SSI: Versioned external CSS/JS assets -->
-    <!-- INLINED-FOOT-BEGIN --><!--#include virtual="/static/include/inlined-foot.html" --><!-- INLINED-FOOT-END -->
+    <!-- INLINED-FOOT-BEGIN -->
+    <!--#include virtual="/static/include/inlined-foot.html" --><!-- INLINED-FOOT-END -->
 
     <!-- 2×2 A/B test of indentation vs newline, and justified vs not  -->
     <script id="justificationindentation-abtest-js">
