--- a/404.page
+++ b/404.page
@@ -27,7 +27,7 @@ error404: true
 
 Try to remember what you were looking for...
 
-# Other Finding Options
+# Other Options
 
 - visit the [**main index**](/index "'Essays', N/A 2009"){.backlink-not .icon-not}
 - use a [**search engine**](https://www.google.com/search?q=site%3Agwern.net)
@@ -100,14 +100,14 @@ Try to remember what you were looking for...
 - [How Should We Critique Research?](/research-criticism "Branwen 2019"){.backlink-not .icon-not}
 - [Open Questions](/question "Branwen 2018"){.backlink-not .icon-not}
 - [Hydrocephalus and Intelligence: The Hollow Men](/hydrocephalus "Branwen 2015"){.backlink-not .icon-not}
-- [Zeo sleep self-experiments](/zeo/zeo "Branwen 2010"){.backlink-not .icon-not}
+- [Zeo Sleep Self-Experiments](/zeo/zeo "Branwen 2010"){.backlink-not .icon-not}
 - [`/newsletter/2020/06`](/newsletter/2020/06 "‘June 2020 News’, Branwen 2019"){.backlink-not .icon-not}
 - [`/newsletter/2021/03`](/newsletter/2021/03 "‘March 2021 News’, Branwen 2020"){.backlink-not .icon-not}
 - [One Man’s Modus Ponens...](/modus "Branwen 2012"){.backlink-not .icon-not}
 - [Everything Is Correlated](/everything "Branwen 2014"){.backlink-not .icon-not}
 - [Tool AIs Want to Be Agent AIs](/tool-ai "Branwen 2016"){.backlink-not .icon-not}
 - [`/newsletter/2021/01`](/newsletter/2021/01 "‘January 2021 News’, Branwen 2020"){.backlink-not .icon-not}
-- [GPT-3 Nonfiction experiments](/gpt-3-nonfiction "'GPT-3 Nonfiction', Branwen 2020"){.backlink-not .icon-not}
+- [GPT-3 Nonfiction Experiments](/gpt-3-nonfiction "'GPT-3 Nonfiction', Branwen 2020"){.backlink-not .icon-not}
 - [`/newsletter/2020/08`](/newsletter/2020/08 "‘August 2020 News’, Branwen 2019"){.backlink-not .icon-not}
 - [`/newsletter/2020/07`](/newsletter/2020/07 "‘July 2020 News’, Branwen 2019"){.backlink-not .icon-not}
 - [`/newsletter/2020/10`](/newsletter/2020/10 "‘October 2020 News’, Branwen 2019"){.backlink-not .icon-not}
