--- a/css/default.css
+++ b/css/default.css
@@ -5553,12 +5553,12 @@ body.lorem div[class^='drop-cap'] {
     margin: 0.5em 0 1em 1em;
 }
 
-/*=-----------------------=*/
-/*= POPUPS OPTIONS DIALOG =*/
-/*=-----------------------=*/
+/*=-------------------------=*/
+/*= EXTRACTS OPTIONS DIALOG =*/
+/*=-------------------------=*/
 
-#popup-options-dialog {
-    --background-color: var(--GW-popups-popup-options-dialog-backdrop-background-color);
+.extracts-options-dialog {
+    --background-color: var(--GW-extracts-options-dialog-backdrop-background-color);
 
     position: fixed;
     left: 0;
@@ -5574,132 +5574,147 @@ body.lorem div[class^='drop-cap'] {
     transition:
         opacity 0.15s ease;
 }
-#popup-options-dialog.fading {
+.extracts-options-dialog.fading {
     opacity: 0;
 }
 
-#popup-options-dialog > div {
-    --background-color: var(--GW-popups-popup-options-dialog-background-color);
+/****************/
+/*	Dialog frame.
+ */
+.extracts-options-dialog > div {
+    --background-color: var(--GW-extracts-options-dialog-background-color);
 
     position: absolute;
-    width: 500px;
+    margin: 1em;
     background-color: var(--background-color);
-    border: 1px solid var(--GW-popups-popup-options-dialog-border-color);
-    box-shadow: 0 2px 2px 0 var(--GW-popups-popup-options-dialog-box-shadow-color);
+    border: 1px solid var(--GW-extracts-options-dialog-border-color);
+    box-shadow: 0 2px 2px 0 var(--GW-extracts-options-dialog-box-shadow-color);
     font-family: var(--GW-sans-serif-font-stack);
     user-select: none;
 }
 
-#popup-options-dialog .popup-options-dialog-title-bar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+/********************/
+/*	Dialog title bar.
+ */
+.extracts-options-dialog .extracts-options-dialog-title-bar {
     padding: 0.5em;
-    border-bottom: 1px solid var(--GW-popups-popup-options-dialog-horizontal-rule-color);
+    border-bottom: 1px solid var(--GW-extracts-options-dialog-horizontal-rule-color);
 }
 
-#popup-options-dialog h1 {
-    margin: 0 0 0 0.75em;
+.extracts-options-dialog h1 {
+    margin: 0;
     text-align: center;
     font-feature-settings: unset;
     font-size: 1.5em;
 }
 
-#popup-options-dialog button {
-    appearance: none;
-    border: none;
-    background-color: inherit;
-    font-family: inherit;
-    font-size: inherit;
+/*****************************/
+/*	Dialog auxiliary controls.
+ */
+.extracts-options-dialog .controls-aux {
+	display: flex;
+	align-items: stretch;
+    padding: 0.75em;
+    border-top: 1px solid var(--GW-extracts-options-dialog-horizontal-rule-color);
 }
-
-#popup-options-dialog button.save-button {
-    --background-color: var(--GW-popups-popup-options-dialog-button-background-color);
+#popup-options-dialog.extracts-options-dialog .controls-aux {
+	justify-content: flex-end;
+}
+#popin-options-dialog.extracts-options-dialog .controls-aux {
+	justify-content: space-between;
+}
+ 
+.extracts-options-dialog .controls-aux button {
+    --background-color: var(--GW-extracts-options-dialog-button-background-color);
 
     background-color: var(--background-color);
     padding: 0 0.75em;
     height: 2em;
     align-items: center;
     line-height: 1;
-    font-weight: 600;
-    color: var(--GW-popups-popup-options-dialog-button-text-color);
-    border: 1px solid var(--GW-popups-popup-options-dialog-button-border-color);
+    font-weight: bold;
+    color: var(--GW-extracts-options-dialog-button-text-color);
+    border: 1px solid var(--GW-extracts-options-dialog-button-border-color);
 }
-#popup-options-dialog button.save-button:hover {
-    cursor: pointer;
-    box-shadow:
-        0 0 0 2px var(--background-color) inset,
-        0 0 0 3px var(--GW-popups-popup-options-dialog-button-hover-box-shadow-color) inset;
+@media only screen and (hover: hover) {
+	.extracts-options-dialog .controls-aux button:hover {
+		cursor: pointer;
+		box-shadow:
+			0 0 0 2px var(--background-color) inset,
+			0 0 0 3px var(--GW-extracts-options-dialog-button-hover-box-shadow-color) inset;
+	}
 }
-#popup-options-dialog button.save-button:active {
+.extracts-options-dialog .controls-aux button:active {
     box-shadow:
         0 0 0 4px var(--background-color) inset,
-        0 0 0 5px var(--GW-popups-popup-options-dialog-button-hover-box-shadow-color) inset;
+        0 0 0 5px var(--GW-extracts-options-dialog-button-hover-box-shadow-color) inset;
 }
 
-#popup-options-dialog button.close-button {
-    position: relative;
-    width: 2em;
-    height: 2em;
-    color: var(--GW-popups-popup-options-dialog-button-text-color);
-}
-#popup-options-dialog button.close-button:hover {
-    cursor: pointer;
-    box-shadow: 1px 1px 0 0 currentColor;
-}
-#popup-options-dialog button.close-button:active {
-    left: 1px;
-    top: 1px;
-    box-shadow:
-        -1px -1px 0 0 currentColor;
-}
-#popup-options-dialog button.close-button svg {
-    height: 100%;
-    width: 100%;
-    fill: currentColor;
+.extracts-options-dialog .controls-aux button.default-button {
+    outline: 2px solid var(--GW-extracts-options-dialog-button-border-color);
 }
 
-#popup-options-dialog .option-buttons {
-    padding: 0.5em 1.5em 0.75em 1.5em;
+.extracts-options-dialog .controls-aux button.save-button {
+    margin-left: 1em;
 }
-#popup-options-dialog .option-buttons label {
+
+/************************/
+/*	Dialog main controls.
+ */
+.extracts-options-dialog .option-buttons {
+    padding: 0.75em;
+}
+.extracts-options-dialog .option-buttons label {
     font-size: 1.125rem;
     font-weight: bold;
     text-align: left;
     display: flex;
     align-items: flex-start;
     width: 100%;
+    box-sizing: border-box;
 }
-#popup-options-dialog .option-buttons label .button-text {
+#popup-options-dialog.extracts-options-dialog .option-buttons label {
+    padding: 0 0.75em;
+}
+#popin-options-dialog.extracts-options-dialog .option-buttons label {
+    padding: 0 0.5em;
+    border: 1px dotted var(--GW-extracts-options-dialog-button-border-color);
+}
+#popin-options-dialog.extracts-options-dialog .option-buttons label + label {
+    margin-top: 0.5em;
+}
+.extracts-options-dialog .option-buttons label .button-text {
     display: block;
-    flex: 1 0 100%;
+    flex: 1 1 100%;
     padding: 0.5em 0.75em;
 }
-#popup-options-dialog .option-buttons label input:checked + .button-text .label {
+.extracts-options-dialog .option-buttons label input:checked + .button-text .label {
     text-decoration: underline;
 }
-#popup-options-dialog .option-buttons label .explanation {
+.extracts-options-dialog .option-buttons label .explanation {
     display: block;
     font-weight: normal;
     font-size: 0.875rem;
-    color: var(--GW-popups-popup-options-dialog-option-button-explanation-text-color);
+    color: var(--GW-extracts-options-dialog-option-button-explanation-text-color);
 }
-#popup-options-dialog .option-buttons label:hover,
-#popup-options-dialog .option-buttons label:hover input {
-    cursor: pointer;
-}
-#popup-options-dialog .option-buttons label:hover {
-    color: var(--GW-popups-popup-options-dialog-option-button-hover-text-color);
-}
-#popup-options-dialog .option-buttons label:hover .button-text .label {
-    text-decoration: dotted underline;
+@media only screen and (hover: hover) {
+	.extracts-options-dialog .option-buttons label:hover,
+	.extracts-options-dialog .option-buttons label:hover input {
+		cursor: pointer;
+	}
+	.extracts-options-dialog .option-buttons label:hover {
+		color: var(--GW-extracts-options-dialog-option-button-hover-text-color);
+	}
+	.extracts-options-dialog .option-buttons label:hover .button-text .label {
+		text-decoration: dotted underline;
+	}
 }
 
-#popup-options-dialog .option-buttons input {
+.extracts-options-dialog .option-buttons input {
     appearance: none;
     font-family: inherit;
     font-size: inherit;
-    border: 1px solid var(--GW-popups-popup-options-dialog-radio-button-border-color);
+    border: 1px solid var(--GW-extracts-options-dialog-radio-button-border-color);
     width: 1rem;
     height: 1rem;
     padding: 0;
@@ -5709,15 +5724,16 @@ body.lorem div[class^='drop-cap'] {
         box-shadow 0.15s ease;
 }
 
-#popup-options-dialog .option-buttons input:checked {
+.extracts-options-dialog .option-buttons input:checked {
     box-shadow:
         0 0 0 3px var(--background-color) inset,
-        0 0 0 1em var(--GW-popups-popup-options-dialog-button-hover-box-shadow-color) inset;
+        0 0 0 1em var(--GW-extracts-options-dialog-button-hover-box-shadow-color) inset;
 }
 
-/*	Popup options button in page toolbar.
+/*******************************************/
+/*	Extracts options button in page toolbar.
  */
-#page-toolbar #show-popup-options-dialog-button {
+#page-toolbar #show-extracts-options-dialog-button {
 	order: 3;
 }
 
