--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -269,10 +269,11 @@
 
 	/*	Page toolbar widgets.
 	 */
-	--GW-page-toolbar-button-icon-color: #e4e4e4;
+	--GW-page-toolbar-button-icon-color: #aaa;
+	--GW-page-toolbar-button-selectable-icon-color: #e4e4e4;
 	--GW-page-toolbar-button-selected-icon-color: #777;
     --GW-page-toolbar-button-text-color: #666;
-    --GW-page-toolbar-button-selected-text-color: #ccc;
+    --GW-page-toolbar-button-disabled-text-color: #ccc;
 
 	/*	Reader mode.
 	 */
@@ -2053,10 +2054,11 @@ body.special-halloween-dark h6 {
 
 	/*	Page toolbar widgets.
 	 */
-	--GW-page-toolbar-button-icon-color: #404040;
+	--GW-page-toolbar-button-icon-color: #7c7c7c;
+	--GW-page-toolbar-button-selectable-icon-color: #404040;
 	--GW-page-toolbar-button-selected-icon-color: #a6a6a6;
     --GW-page-toolbar-button-text-color: #b4b4b4;
-    --GW-page-toolbar-button-selected-text-color: #5c5c5c;
+    --GW-page-toolbar-button-disabled-text-color: #5c5c5c;
 
 	/*	Reader mode.
 	 */
@@ -3882,8 +3884,7 @@ ReaderMode.injectStyleBlock(ReaderMode.styles, "reader-mode-styles");
 //  Activate saved mode, once the <body> element is loaded (and classes known).
 doWhenBodyExists(ReaderMode.setMode);
 </script>
-
-<link rel="preload" href="/static/css/fonts.css?v=1684262897" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
-<link rel="preload" href="/static/css/default.css?v=1684267353" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
+<link rel="preload" href="/static/css/fonts.css?v=1684274058" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
+<link rel="preload" href="/static/css/default.css?v=1684275957" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
 <link rel="preload" href="/static/css/links.css?v=1682784367" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
 <link rel="preload" href="/static/img/icon/icons.svg" as="image">
