--- a/include/inlined-asset-versions.html
+++ b/include/inlined-asset-versions.html
@@ -5,6 +5,7 @@ GW.assetVersions = {
 	"/static/template/include/annotation-blockquote-outside.tmpl": "1682033051",
 	"/static/template/include/pop-frame-title-annotation.tmpl": "1680536401",
 	"/static/template/include/pop-frame-title-standard.tmpl": "1680536244",
-	"/static/template/include/templates.json": "1676590455"
+	"/static/template/include/templates.json": "1676590455",
+	"/static/img/icon/icons.svg": "1684357509"
 };
 </script>
